# Isker

./: .gitignore  .gitmodules  CMakeLists.txt
Game/: CMakeLists.txt
Game/src/: main.cpp
Isker/: CMakeLists.txt
Isker/platform/web/: index.html
Isker/src/: Isker.hpp
Isker/src/Isker/: EntryPoint.hpp  Game.cpp  IskerAPI.hpp  main.cpp
asset/shader/: color_frag.glsl  color_vert.glsl  sprite_frag.glsl  sprite_vert.glsl
cmake/modules/: FindSDL2.cmake
platform/web/: app.js  index.html  style.css
src/: Game.cpp  Game.hpp  Input.cpp  Input.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Singleton.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  main.cpp  one_time_implements.c
src/Component/: Transform2D.cpp  Transform2D.hpp
src/Render/: Font.cpp  Font.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Texture.cpp  Texture.hpp
src/render/: Font.cpp  Font.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
